--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "nodemon -r dotenv/config index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "migrate": "npx knex migrate:latest --knexfile db/knexFile.js"
+    "migrate": "npx knex --esm migrate:latest --knexfile db/knexFile.js"
   },
   "keywords": [],
   "author": "",
