--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon -r dotenv/config index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrate": "npx knex migrate:latest --knexfile db/knexfile.js",
-    "rollback": "npx knex --esm migrate:rollback --knexfile db/knexfile.js "
+    "rollback": "npx knex migrate:rollback --knexfile db/knexfile.js",
+    "seed": "npx knex seed:run --knexfile db/knexfile.js"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +22,7 @@
     "pg": "^8.6.0"
   },
   "devDependencies": {
+    "faker": "^5.5.3",
     "nodemon": "^2.0.7"
   }
 }
